--- a/notebooks/wav2vec/Wav2Vec2.ipynb
+++ b/notebooks/wav2vec/Wav2Vec2.ipynb
@@ -247,6 +247,13 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -261,13 +268,13 @@
         },
         {
           "ename": "ImportError",
-          "evalue": "cannot import name 'get_iemocap' from 'data_loaders.iemocap' (/usr/users/gpupro/gpu_ajeghrir/projects/multimodal_sentiment_analysis/notebooks/wav2vec/../../src/data_loaders/iemocap.py)",
+          "evalue": "cannot import name 'get_iemocap' from 'data_loaders.iemocap' (/mnt/c/Users/Mustapha/Documents/CENTRALESUPELEC_3A/advanced AI/multimodal_sentiment_analysis/notebooks/wav2vec/../../src/data_loaders/iemocap.py)",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/gpu_ajeghrir-1535/ipykernel_1294002/827439577.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdata_loaders\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miemocap\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_iemocap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_iemocap' from 'data_loaders.iemocap' (/usr/users/gpupro/gpu_ajeghrir/projects/multimodal_sentiment_analysis/notebooks/wav2vec/../../src/data_loaders/iemocap.py)"
+            "\u001b[0;32m/tmp/ipykernel_14380/827439577.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdata_loaders\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miemocap\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_iemocap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_iemocap' from 'data_loaders.iemocap' (/mnt/c/Users/Mustapha/Documents/CENTRALESUPELEC_3A/advanced AI/multimodal_sentiment_analysis/notebooks/wav2vec/../../src/data_loaders/iemocap.py)"
           ]
         }
       ],
@@ -4581,7 +4588,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.9.9"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
